Spacing fixes on collection template

--- a/shopify/assets/fps.css
+++ b/shopify/assets/fps.css
@@ -120,8 +120,13 @@ ul.slides {
 .image-grid {
 	display: grid;
 	grid-template-columns: repeat(4, 1fr);
-	grid-gap: 4%;
+	grid-gap: 5.5vw 4%;
 	text-align: center;
+}
+@media (min-width: 908px) {
+	.image-grid {
+		grid-row-gap: 50px;
+	}
 }
 ul.slides {
 	display: block;
@@ -153,19 +158,19 @@ ul.slick-dots button::before {
 	font-size: 1em;
 	font-weight: normal;
 	text-transform: none;
-	margin: 0.4em 0 0;
+	margin: 0.2em 0 0;
 	letter-spacing: 0;
 }
 .image-grid p {
 	font-size: 0.9em;
-	margin-top: 0.1em;
+	margin: 0.1em 0 0;
 	font-weight: bold;
 }
 .image-grid img {
 	border: 1px solid aqua;
 	width: 100%;
 	height: calc(25vw - 30px);
-	max-height: 200px;
+	max-height: 192px;
 	object-fit: contain;
 	padding: 8px;
 }
@@ -590,7 +595,7 @@ form.oneline-form {
 	letter-spacing: 2px;
 }
 #collection-main > header {
-	margin-bottom: 6%;
+	margin-bottom: 5.2%;
 }
 #collection-main > header p {
 	text-align: justify;
@@ -601,8 +606,8 @@ form.oneline-form {
 	text-align: center;
 }
 #collection-main ul {
+	margin-top: 0.1em;
 	font-size: 0.95em;
-	grid-row-gap: 3vw;
 }
 #collection-main > main img {
 	padding: 0.7em;
